<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.androidclientyelpapi.viewmodels.RestaurantsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screenBackgroundColor"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_rectangle"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <EditText
                android:id="@+id/searchTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/search_textview_hint" />

            <Button
                android:id="@+id/searchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_rectangle_border"
                android:textSize="@dimen/regular_text_size"
                android:text="@string/search_button_text" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/restaurantsList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/restaurant_recycler_contentdescription" />

    </LinearLayout>

</layout>